--- a/form.html
+++ b/form.html
@@ -1,14 +1,8 @@
 <!DOCTYPE html>
 <head>
-  <title>Fill in this form</title>
+  <title>請使用官網聯繫表單聯繫</title>
 </head>
 <body>
-  <form action="" method="post" enctype="multipart/form-data">
-  <label for="Email">Email</label><br />
-  <input id="Email" type="email" name="Email" required><br />
-  <label for="Name">Name</label><br />
-  <input id="Name" type="text" name="Name" required><br />
-  <input type="submit" value="Send">
-</form>
+  請使用雙龍體育官網聯繫表單聯繫
 </body>
 </html>
