--- a/form.html
+++ b/form.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <head>
-  <title>請使用官網聯繫表單聯繫</title>
+  <title>please use ssport website contact us</title>
 </head>
 <body>
-  請使用雙龍體育官網聯繫表單聯繫
+  Please use the link https://ssangyongsports.eu.org/contact to contact us, instead of using this site.
 </body>
 </html>
