--- a/form.html
+++ b/form.html
@@ -5,4 +5,8 @@
 <body>
   Please use the link https://ssangyongsports.eu.org/contact to contact us, instead of using this site.
 </body>
+<body>
+ If you using our website form  to contact us, redirect to this page please contact:dev@ssangyongsports.eu.org to fix question
+</body>
+
 </html>
