--- a/form.html
+++ b/form.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <head>
-  <title>please use ssport website contact us</title>
+<title>405錯誤</title>
 </head>
 <body>
-  Please use the link https://ssangyongsports.eu.org/contact to contact us, instead of using this site.
-</body>
-<body>
- If you using our website form  to contact us, redirect to this page please contact:dev@ssangyongsports.eu.org to fix question
-</body>
+<h1>伺服器回傳「405 Method Not allowed」。</h1>
+<p>立刻聯繫雙龍體育團隊了解問題dev@ssangyongsports.eu.org</p>
 
+</body>
 </html>
