--- a/form.html
+++ b/form.html
@@ -3,8 +3,8 @@
 <title>405錯誤</title>
 </head>
 <body>
-<h1>伺服器回傳「405 Method Not allowed」。</h1>
-<p>立刻聯繫雙龍體育團隊了解問題dev@ssangyongsports.eu.org</p>
+<h1>405 Method Not allowed。</h1>
+<p>Please contact us to slove the questions.our mail:dev@ssangyongsports.eu.org</p>
 
 </body>
 </html>
