--- a/form.html
+++ b/form.html
@@ -3,8 +3,8 @@
 <title>405 error </title>
 </head>
 <body>
-<h1>405 Method Not allowed。</h1>
-<p>Please contact us to slove the questions.our mail:dev@ssangyongsports.eu.org</p>
-<p>This is ssangyongsports contact form api</p>
+<h1>405 Method Not allowed</h1>
+<p>Any questions please contact   dev@ssangyongsports.eu.org</p>
+<p>This cintact form powered by Ssangyong sports</p>
 </body>
 </html>
