--- a/form.html
+++ b/form.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <head>
-<title>405 error </title>
+<meta charset="utf-8">
+<title>405 錯誤</title>
 </head>
 <body>
-<h1>405 Method Not allowed</h1>
-<p>Any questions please contact   dev@ssangyongsports.eu.org</p>
-<p>This cintact form powered by Ssangyong sports</p>
+<h1>405 方法不被允許</h1>
+<p>如有任何問題,請聯繫 dev@ssangyongsports.eu.org</p>
+<p>此聯繫表單由雙龍體育提供技術支持</p>
 </body>
 </html>
