--- a/form.html
+++ b/form.html
@@ -1,11 +1,47 @@
 <!DOCTYPE html>
+<html lang="zh-tw">
 <head>
-<meta charset="utf-8">
-<title>405 錯誤</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>405 錯誤</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f5f5f5;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+      padding: 20px;
+      box-sizing: border-box;
+    }
+
+    .error-container {
+      background-color: #fff;
+      padding: 30px;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+      text-align: center;
+      max-width: 500px;
+    }
+
+    h1 {
+      color: #dc3545;
+      margin-bottom: 20px;
+    }
+
+    p {
+      color: #6c757d;
+      margin-bottom: 15px;
+    }
+  </style>
 </head>
 <body>
-<h1>405 方法不被允許</h1>
-<p>如有任何問題,請聯繫 dev@ssangyongsports.eu.org</p>
-<p>此聯繫表單由雙龍體育提供技術支持</p>
+  <div class="error-container">
+    <h1>405 Method 錯誤</h1>
+    <p>抱歉,您嘗試的請求方法對於此資源是不被允許的。</p>
+    <p>請檢查您的請求方法是否正確,或聯繫雙龍體育團隊。</p>
+  </div>
 </body>
 </html>
