--- a/form.html
+++ b/form.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
-<html>
-<head>
-<title>Page Title</title>
+<html lang="zh-tw"><head><meta charset="utf-8">
+<title>405 Method 錯誤</title>
 <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.css" rel="stylesheet" />
  <style>
         @font-face {
