--- a/form.html
+++ b/form.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="zh-tw"><head><meta charset="utf-8">
+<html lang="zh-tw"><head><meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="utf-8">
 <title>405 Method 錯誤</title>
 <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.css" rel="stylesheet" />
  <style>
