--- a/form.html
+++ b/form.html
@@ -364,7 +364,7 @@
 </h1><h1 class="mb-4 text-5xl font-extrabold leading-tight text-gray-900 lg:mb-6 lg:text-5xl dark:text-white">405 Method 錯誤
 </h1><p>抱歉,您嘗試的請求方法對於此資源是不被允許的。
 請檢查您的請求方法是否正確,或聯繫雙龍體育團隊</p><p></p><button onclick="if (!window.__cfRLUnblockHandlers) return false; history.back()" type="button" class="text-white bg-gradient-to-r from-blue-500 via-blue-600 to-blue-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2">回上一頁</button>
-    <p>這是由雙龍體育技術團隊開發的聯繫系統,任何技術問題請聯繫help@ssport.eu.org
+    <p>這是由雙龍體育技術團隊開發的聯繫系統,任何技術問題請聯繫tech@ssangyongsports.eu.org
 </p></header></article>
 </div>
 </main>
